--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,5 +1,21 @@
 .App {
-  text-align: center;
+  background-color: #282c34;
+}
+
+/* Laptop */
+@media only screen and (min-width: 480px) {
+  .App-body {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+/* Mobile */
+@media only screen and (max-width: 480px) {
+  .App-body {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .App-logo {
@@ -7,15 +23,10 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  margin-left: 300px;
+  margin-right: 300px;
+  min-height: 85vh;
   display: flex;
   flex-direction: column;
   align-items: center;
